--- a/dribbble/build.gradle
+++ b/dribbble/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
-    compile 'de.greenrobot:eventbus:2.4.0'
     compile project(':sdk-library')
     compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
