--- a/dribbble/build.gradle
+++ b/dribbble/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -26,5 +29,4 @@ dependencies {
     compile project(':sdk-library')
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
 }
